src/components/Tile.css
.Tile {
  cursor: pointer;
  width: 100%;
  height: 100%;
  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
  overflow: hidden;
  border-radius: 5px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  
}

.TileTitle {
  width: 100%;
  box-sizing: border-box;
  padding: 10px;
  padding-bottom: 0px;
  /* flex: 1; */
  height: 12%;
  background-color: #fff;
  font-size: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.TileTitle div {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #115E67CD;
  padding-bottom: 5px;
  border-bottom: 1px solid #70707033;

}
.TileHandle {
  position: absolute;
  right: 5px;
  top: 9px;
}
.TileHeaderText {
  font-size: 17px;
  font-weight: 400;
  margin-bottom: 2px;
}
.TileBody {
  position: relative;
  width: 100%;
  /* flex property not working with flex item containing image in safari */
  /* flex: 10; */
  height: 88%;
  padding: 10px;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

